export report data to csv file

--- a/views/lecturer/question.ejs
+++ b/views/lecturer/question.ejs
@@ -39,19 +39,19 @@
         </div>
       </div>
     </div>
-    <div class="oq-viewTestsBody">
+    <div class="oq-viewTestsBody" style="width: fit-content">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="oq-viewTests">
+        <div class="row" style="width: max-content">
+          <div style="width: fit-content">
+            <div class="oq-viewTests" style="width: max-content">
               <div class="oq-testsHead">
                 <!-- <?php
-                                                    if(isset($_GET['error'])){
+                                      oq-viewTests              if(isset($_GET['error'])){
                                                         echo "<div class='row'><div class='col-md-12'><div class='pull-right'><span class='oq-error'>*Question already exists!</span></div></div></div><br>";
                                                     }
                                                 ?> -->
-                <div class="row">
-                  <div class="col-md-6">
+                <div class="row" style="width: max-content">
+                  <div class="col-md-6" style="width: fit-content">
                     <span class="oq-testsHeadText"> <%= test.test_name%> </span>
                   </div>
                   <div class="col-md-3">
