--- a/views/admin/students.ejs
+++ b/views/admin/students.ejs
@@ -66,7 +66,18 @@
                   </div>
                   <div class="col-md-3">
                     <div class="pull-right">
-                      <a href="/" class="oq-addbtn">Back</a>
+
+
+                      <form action="/export-users" method="post">
+                        <input type="hidden" name="user_role" value="STUDENT">
+                        <input type="submit" class="oq-addbtn" value="Export Data To Excel File">
+                      </form>
+
+                      <!-- <div>
+                        <a href="/" class="oq-addbtn">Back</a>
+                      </div> -->
+      
+                   
                     </div>
                   </div>
                 </div>
